# aphrael

./: .gitignore  CLAUDE.md  Dockerfile  Gemfile  README.ja.md  README.md  config.js  config.ru  docker-compose.yml  gulpfile.js  package-lock.json  package.json  pyproject.toml  webpack.config.js  webpack.config.production.js
.github/workflows/: ci.yml
app/client/css/: main.css
app/client/js/: home.js  main.js
app/client/js/models/: fav.js  targets.js
app/client/js/views/: breadcrumbs.js  dirs.js  home.js  images.js  index.js  navbar.js
app/server/: server.js
configs/: config.yml
docs/design/golang-migration/: README.md  phase-0-foundation.md  phase-1a-palmdoc.md
example/: index.js
example/2012/: index.js
lib/: aphrael.rb
lib/aphrael/: config.rb  directory.rb  image.rb  resource.rb  server.rb
nginx/: nginx.conf
nginx/sites-enabled/: 000-default.conf
patchs/: image_science-27.patch
samples/: 01.azw3  01.epub  02.azw3  02.epub  03.azw3  03.epub  2025-06.azw3  2025-06.epub  2025-07.azw3  2025-07.epub  news.recipe
src/calibre/: __init__.py  constants.py  ptempfile.py  startup.py
src/calibre/customize/: __init__.py  builtins.py  conversion.py  ui.py  zipplugin.py
src/calibre/ebooks/: __init__.py  chardet.py  covers.py  html_transform_rules.py
src/calibre/ebooks/compression/: palmdoc.py
src/calibre/ebooks/conversion/: cli.py  plumber.py
src/calibre/ebooks/epub/epub/: pages.py
src/calibre/ebooks/metadata/: mobi.py  opf2.py
src/calibre/ebooks/metadata/book/: base.py  render.py
src/calibre/ebooks/metadata/metadata/: cli.py  docx.py  epub.py  ereader.py  extz.py  html.py  kdl.py  kfx.py  lit.py  meta.py  mobi.py  opf.py  opf2.py  opf3.py  opf3_test.py  opf_2_to_3.py  pdb.py  pdf.py  plucker.py  snb.py  utils.py  worker.py  xmp.py
src/calibre/ebooks/metadata/sources/: __init__.py  identify.py
src/calibre/ebooks/mobi/mobi/: mobiml.py  tweak.py  utils.py
src/calibre/ebooks/mobi/writer2/: resources.py
src/calibre/ebooks/oeb/: parse_utils.py  reader.py
src/calibre/gui2/: __init__.py
src/calibre/utils/: cleantext.py  config_base.py  date.py  formatter.py  formatter_functions.py  icu.py  img.py  iso8601.py  localization.py  lock.py  resources.py  safe_atexit.py  speedups.py  zipfile.py
src/qt/: __init__.py  core.py
tests/features/: convert.feature  test_convert.py
tests/unit/: test_barename_namespace.py  test_chardet.py  test_cleantext.py  test_icu_fallback.py  test_palmdoc.py
tests/unit/polish/: base.py  test_cascade.py  test_container.py  test_kepubify.py  test_parsing.py
(+37 files in other folders)
